# ppfg-interpolator

./: .env.example  .gitignore  README.md  auto-zip.js  build_binary.sh  corva.spec  file.txt  make_zip.js  md_tvd_interpolator.html  pyproject.toml
docs/: dataset.json
groups/: generated_groups.json
ppfg-app/: .gitignore  manifest.json  package.json  upload.js
ppfg-app/src/: App.js  AppSettings.js  index.js  ppfgHtml.js
ppfg-app/src/components/: index.js
ppfg-app/src/components/WITSSummaryChart/: index.js
scripts/: update_datasets.py
src/corva_cli/: __init__.py  __main__.py  auth.py  cli.py  datasets.py  grouping.py  output.py  paths.py  settings.py  timewindow.py  utils.py
src/corva_cli/tools/: base.py  registry.py  timelog.py
tests/: test_auth.py  test_cli_tools.py  test_group_cli.py  test_grouping.py  test_output.py  test_settings.py  test_timewindow.py  test_update_datasets.py  test_utils.py
