[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corva-cli"
version = "0.1.0"
description = "Experimental CLI for pluggable Corva tooling"
authors = [{ name = "Corva" }]
requires-python = ">=3.14"
dependencies = [
    "typer[all]>=0.12",
    "plotext>=5.2",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
corva = "corva_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/corva_cli"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
